Rename and cleanup a plethora of modules